samples/invalid_files/components_with_same_name.nts
# Admiral Business Machines 1954-2042
# One and gate

.chipsets:
input		a
input		a
output		s
and 		gate

.links:
a:1		gate:1#toto
b:1		gate:2
s:1		gate:3
